# spral

./: Cargo.toml  LICENCE  README.md
src/: lib.rs  matrix_util.rs  random.rs  random_matrix.rs
src/scaling/: auction.rs  equilib.rs  hungarian.rs  mod.rs
