[package]
name = "spral"
version = "0.1.0"
description = "Rust wrapper for SPRAL"
license = "BSD-3-Clause"
repository = "https://github.com/rwl/spral"
edition = "2021"

[dependencies]
#spral-sys = "0.1.0"
spral-sys = { path = "../spral-sys", features = ["shared_libraries"] }

#[features]
#shared_libraries = ["spral-sys/shared_libraries"]
#static_libraries = ["spral-sys/static_libraries"]
